# APS-Beamline-Assistant

./: .env.template  .gitignore  ADDING_NEW_SERVERS.md  APEXA_SMART_FEATURES_MANUAL.md  BEAMLINE_DEPLOYMENT.md  LICENSE  MIDAS_WORKFLOWS_REFERENCE.md  MODULAR_ARCHITECTURE.md  Parameters.txt  Parameters_CeO2_7m.txt  QUICKSTART.md  README.md  USER_MANUAL.md  WEB_UI_GUIDE.md  analysis_utilities_server.py  argo_mcp_client.py  basic-client.py  beamline_web_ui.html  build_docs.sh  command_executor_server.py  debug_argo_payload.py  debug_startup.sh  fastmcp_midas_server.py  filesystem_server.py  find_midas_env.py  main.py  midas_comprehensive_server.py  midas_workflows.py  mkdocs.yml  pyproject.toml  run_midas_validation.py  serve_docs.sh  servers.config  setup_user.sh  start_beamline_assistant.sh  start_web_viewer.sh  startup-mac.sh  test_midas_tools.sh  test_viewer.html  validate_midas_setup.py  (+1 more)
ML-deploy/: IMPLEMENTATION_GUIDE.md  ML_INTEGRATION_VISION.md  ml_deployment_guide.md  ml_model_mcp_server.py
docs/: setup_user.sh
docs/archive/: DEPLOYMENT_GUIDE.md  INSTALLATION_COMPLETE.md  QUICK_START_GUIDE.md  (+1 more)
manuscript-APEXA/: MANUSCRIPT_STATUS.md  README.md  data_tables.tex  main.tex  requirements.txt
parameter_templates/: calibration_template.txt  ff_hedm_template.txt  nf_hedm_template.txt  pf_hedm_template.txt
servers/: gsas2_server.py  maud_server.py
test1/: CeO_000001.tif.ge.analysis.MIDAS.ge5ps.txt  CeO_000001.tif.ge.analysis.MIDAS.zip.old  Parameters.txt  ZipOut.txt  calibrant_screen_out.csv  hkls.csv  hkls_screen_out.csv  ps.txt  test_ps.txt
(+23 files in other folders)
