[project]
name = "beamline-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fabio>=2024.9.0",
    "fastapi>=0.116.2",
    "httpx>=0.28.1",
    "lmfit>=1.3.4",
    "matplotlib>=3.10.6",
    "mcp>=1.14.1",
    "numpy>=2.3.3",
    "orjson>=3.11.3",
    "pandas>=2.3.2",
    "pillow>=11.3.0",
    "plotly>=6.3.0",
    "pyfai>=2025.3.0",
    "python-dotenv>=1.1.1",
    "python-multipart>=0.0.20",
    "rich>=14.1.0",
    "scikit-image>=0.25.2",
    "scipy>=1.16.2",
    "seaborn>=0.13.2",
    "typer>=0.17.4",
    "uvicorn>=0.35.0",
    "websockets>=15.0.1",
    "fastapi>=0.104.0",
    "websockets>=12.0",
    "python-multipart>=0.0.6",
    "tifffile>=2024.1.0"
]
